# sokol_angelscript

./: CMakeLists.txt  main.c
cangelscript/: cangelscript.cpp  cangelscript.h
data/: main.as
